# UDA

./: .gitignore  Downloads.md  LOC.sh  LOC_exclude_UDA.txt  Makefile  ProjectHome.md  README.bigtop.build.txt  README.md  SubmitPatch.md  UDATuningRecommendations.md  UDA_Tuning_Recommendations_for_Hadoop_2.md  YARN_configuration_with_UDA.md  build.xml  build_all.sh  release
UDA-2.0.0-hadoop-0.20.2/conf/: mapred-site.xml.template.mlx
UDA-2.0.0-hadoop-0.20.203/conf/: mapred-site.xml  slaves
UDA-2.0.0-hadoop-0.20.203/docs/: Secure_Impersonation.html  cluster_setup.html  fair_scheduler.html  hdfs_permissions_guide.html  streaming.html
cases/: runRegression.sh  runRegression_1.sh  runRegression_2.sh  uda.cases  uda_client_server_wrapper.py  uda_regression_cluster1.cases  uda_regression_cluster1_wrapper.py  uda_standalone_wrapper.py
conf/: core-site.xml  hdfs-site.xml.template.mlx  mapred-site.xml
hadoop-0.20.2/: build.xml
hadoop-0.20.2-uda/: build.xml
hadoop-0.20.2-uda/conf/: hadoop-env.sh  hadoop-env.sh.template.mlx  hdfs-site.xml.template.mlx  log4j.properties  mapred-site.xml  mapred-site.xml.template.mlx  master
hadoop-0.20.2-uda/conf_dev/: hdfs-site.xml  slaves
hadoop-0.20.2/conf/: hadoop-env.sh.template.mlx  slaves
hadoop-0.20.2/conf_dev/: core-site.xml  hadoop-env.sh  mapred-site.xml  masters
hadoop-0.20.203/: build.xml
hadoop-0.20.203-uda/: build.xml
hadoop-0.20.203-uda/conf/: hdfs-site.xml.template.mlx  log4j.properties  mapred-site.xml  mapred-site.xml.template.mlx
hadoop-0.20.203-uda/docs/: file_system_shell.html  gridmix.html  hadoop_archives.html  hdfs_quota_admin_guide.html  mapred_tutorial.html  native_libraries.html
hadoop-0.20.203/conf/: core-site.xml  hadoop-env.sh  hdfs-site.xml  mapred-site.xml  masters  slaves
hadoop-0.20.203/docs/: SLG_user_guide.html  distcp.html  service_level_auth.html
hadoop-0.20.203/hadoop-0.20.2/: .gitignore
hadoop-1.0.0-uda/: build.xml
hadoop-1.0.0-uda/conf/: hadoop-env.sh  hadoop-env.sh.template  hadoop-env.sh.template.mlx  mapred-site.xml.template.mlx
hadoop-1.0.0-uda/docs/: HttpAuthentication.html  SLG_user_guide.html  Secure_Impersonation.html  capacity_scheduler.html  core-default.html  deployment_layout.html  file_system_shell.html  hdfs_design.html  hdfs_permissions_guide.html  libhdfs.html  native_libraries.html  vaidya.html
hadoop-1.0.0/docs/: changes.html  cluster_setup.html  commands_manual.html  distcp.html  fair_scheduler.html  gridmix.html  hadoop_archives.html  hdfs_quota_admin_guide.html  hdfs_user_guide.html  hod_scheduler.html  index.html  linkmap.html  mapred_tutorial.html  service_level_auth.html  single_node_setup.html  streaming.html  webhdfs.html
hadoop-1.0.0/libexec/: jsvc.amd64
hadoop-1.0.2-uda/: build.xml
hadoop-1.0.2-uda/conf/: core-site.xml.template  core-site.xml.template.mlx  hadoop-env.sh.template  hdfs-site.xml.template.mlx  mapred-site.xml.template.mlx
hadoop-1.0.2-uda/docs/: HttpAuthentication.html  SLG_user_guide.html  changes.html  cluster_setup.html  commands_manual.html  (+10 more)
hadoop-1.1.0-uda/: build.xml
mlx/: Makefile  uda.spec
mlx-0.20.2/: Makefile
mlx-1.x/: Makefile
mlx-3.x/: Makefile
mlx-CDH3u4/: Makefile  cdh3u4.patch
plugins/: CDH-MR1-4.1.2-v2-F3.patch  CDH-MR1-4.1.2-v2.patch  CDH-MR1-4.2.1-half.patch  HADOOP-1.0.x.patch  HADOOP-1.1.x.patch  HADOOP-1.x.y-v2.patch  HADOOP-1.x.y-v3.patch  HADOOP-1.x.y.patch  HADOOP-2.0.patch  HADOOP-2.1.patch  HADOOP-3.0.patch  HDP_HADOOP-1.0.3.16.patch  MAPREDUCE-5329.patch  MR1-CDH4.1.patch  Makefile
rpm/: buildall.sh  buildrpm.sh  install-uda.sh  makerpm.sh  mapred-site.xml  uda-env.sh  uda.spec
scripts/: MapReduce_script.sh  analyze_reduce_tasks.awk  cache_flush.sh  check_time_diff.awk  copy_conf.sh  copy_scripts_dir.sh  create_terasort_conf.awk  cron_regression_from_local_scripts.sh  deleteOldDirectories.sh  fm_part.sh  for_coverage.patch  gen_coverage.sh  gen_coverage_setup.sh  job-log.awk  job-log.sh  killCM.sh  kill_java.sh  live_nodes.sh  map_red_calc.awk  mark_slaves.sh  mkteragen.sh  mkteragenExcel.sh  mr-dstat.sh  mr-dstatExcel.sh  mr_proccess_results.awk  replace_conf_mapred.sh  reset_all.sh  restart_mr.sh  results.awk  results2.awk  results3.awk  runterasort.sh  runterasortExcel.sh  set_hadoop_slave_property.sh  set_slave_host_name.sh  set_xml_value.sh  start_hadoop.sh  start_hadoopExcel.sh  switch_cluster_inerface.sh  switch_hostname.sh  (+1 more)
src/: .gitignore  AUTHORS  MOFSupplier.cc  Makefile.am  NetMerger.cc  RDMA-modified.txt  RDMA.txt  UdaBridge.cc  UdaBridge.h  UdaLoader.cc  acinclude.m4  aclocal.m4  autogen.sh  bullseye.h  configure.ac  premake.sh
src/AsyncIO/: AbstractReader.cc  AbstractReader.h  AsyncReaderManager.cc  AsyncReaderManager.h  AsyncReaderThread.cc  AsyncReaderThread.h  ReaderFactory.h
src/CommUtils/: AIOHandler.cc  C2JNexus.cc  IOUtility.cc  UdaUtil.cc  atomic.cc
src/DataNet/: Makefile  RDMAClient.cc  RDMAClient.h  RDMAComm.cc  RDMAComm.h  RDMAServer.cc  RDMAServer.h
src/MOFServer/: IndexInfo.cc  IndexInfo.h  MOFServlet.cc  MOFServlet.h  MOFSupplierMain.cc  MOFSupplierMain.h
src/Merger/: CompareFunc.cc  CompareFunc.h  DecompressorWrapper.cc  DecompressorWrapper.h  DummyDecompressor.cc  FetchManager.cc  InputClient.cc  InputClient.h  LzoDecompressor.cc  LzoDecompressor.h  MergeManager.cc  MergeManager.h  MergeQueue.cc  MergeQueue.h  NetMergerMain.cc  SnappyDecompressor.cc  SnappyDecompressor.h  StreamRW.cc  StreamRW.h  reducer.cc  reducer.h
src/c++/roce/: MOFSupplier.cc  RoceCodingStyle  autogen.sh
src/c++/roce/CommUtils/: C2JNexus.cc  IOUtility.cc
src/c++/roce/DataNet/: Makefile  RDMAComm.cc
src/c++/roce/MOFServer/: IndexInfo.cc  IndexInfo.h
src/c++/roce/Merger/: FetchManager.cc  MergeManager.h  MergeQueue.cc  StreamRW.cc  StreamRW.h  reducer.cc
src/include/: AIOHandler.h  C2JNexus.h  IOUtility.h  LinkList.h  MemCache.h  NetlevComm.h  UdaUtil.h  atomic.h  concurrent_queue.h
src/tests/: AIOHandler_test.cc  ClientDriver.cc  ClientTestList  ServerDriver.cc  compile_aio_test.sh
tests/: test.txt
uda_hadoop_migration_0.20.2_to_0.20.203/: build.xml
(+7175 files in other folders)
